--- a/index.html
+++ b/index.html
@@ -14,73 +14,53 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo">Logo</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
+            <a href="#" class="brand-logo center"><i class="material-icons">question_answer</i>KHWANTA</a>
         </div>
     </nav>
 
-
     <div class="container">
-        <div class="row">
-            <div class="col s5">5</div>
-            <div class="col s2">2</div>
-            <div class="col s4">4</div>
-            <div class="col s1">1</div>
-        </div>
-    </div>
+        <h3>SIGN IN</h3>
+        <form>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">account_circle</i>
+                    <input id="username" type="text" name="username" class="validate">
+                    <label for="icon_prefix">Username</label>
+                </div>
 
-    <div class="container-fluid">
-        <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="material-icons prefix">lock_outline</i>
+                    <input id="password" type="password" name="password" class="validate">
+                    <label for="icon_prefix">Password</label>
                 </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-                        <label for="disabled">Disabled</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="password" type="password" class="validate">
-                        <label for="password">Password</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">Email</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s12">
-                        This is an inline input field:
-                        <div class="input-field inline">
-                            <input id="email" type="email" class="validate">
-                            <label for="email" data-error="wrong" data-success="right">Email</label>
-                        </div>
-                    </div>
-                </div>
-            </form>
-        </div>
+            </div>
+            <button type="button" id="singin" name="button" class="btn waves-effect waves-light">SIGN IN
+            <i class="material-icons right">send</i>
+        </form>
     </div>
 
 
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script type="text/javascript">
+        $("#singin").click(function() {
+            var url = "http://membershipwebapi977290.azurewebsites.net/api/members/signin?";
+            url += "username=" + $("#username").val();
+            url += "&password=" + $("#password").val();
+            console.log(url);
+            $.get(url, function(data, status) {
+                console.log(data);
+                if (data == "true") {
+                    console.log("TRUE" + data);
+                } else {
+                    console.log(data.Status);
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
